--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,5 +3,8 @@
 @import url("components/article.css");
 @import url("components/header.css");
 @import url("components/footer.css");
-@import url("components/about.css")
+@import url("components/about.css");
+@import url("components/form.css");
+@import url("components/input.css")
+
 /* layout */
