--- a/assets/css/components/header.css
+++ b/assets/css/components/header.css
@@ -37,3 +37,75 @@
   outline: 2px solid var(--outline-primary);
   outline-offset: 1px;
 }
+#menu-mobile,
+#toggle-close,
+#toggle-open{
+  display: none;
+}
+
+@media only screen and (max-width: 400px) {
+
+  .navbar,
+  #toggle-close,
+  #toggle-open {
+    display: block;
+  }
+
+  .navbar__links {
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 0;
+    padding-bottom: 1rem;
+  }
+
+  .navbar__links li:last-child {
+    width: 100%;
+  }
+
+  .expandable {
+    display: none;
+  }
+
+  #menu-mobile:checked ~ .expandable {
+    display: flex;
+  }
+
+  .header__logo {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+  }
+
+  .header__logo:focus {
+    outline: none;
+  }
+
+  #toggle-close,
+  #toggle-open {
+    color: var(--white);
+  }
+
+  #menu-mobile:checked ~ * #toggle-open,
+  #menu-mobile:not(:checked) ~ * #toggle-close {
+    display: none;
+  }
+
+  /* @keyframes spin {
+    0% {
+      transform: rotate(0deg);
+    }
+    25% {
+      transform: rotate(90deg);
+    }
+    50% {
+      transform: rotate(180deg);
+    }
+    75% {
+      transform: rotate(270deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  } */
+
+}
