--- a/assets/css/global/utils.css
+++ b/assets/css/global/utils.css
@@ -36,6 +36,12 @@
   padding-bottom: 3rem;
 }
 
+.py-1 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+/* 4 = 1rem = 16px; 1 = 0.25rem = 4px */
 .my-0\.5{
   margin-top: .5rem;
   margin-bottom: .5rem;
@@ -59,4 +65,28 @@
 
 .bg-primary-darker {
   background-color: var(--primary-darker);
+}
+
+.flex {
+  display: flex;
+}
+
+.flex-row {
+  flex-direction: row;
+}
+
+.flex-column {
+  flex-direction: column;
+}
+
+.gap-0\.5 {
+  gap: 0.5rem;
+}
+
+.top-2{
+  margin-top: 2rem;
+}
+
+.bottom-2{
+  margin-bottom: 2rem;
 }
