ADD: Portafolio HTML and CSS

--- a/assets/css/components/about.css
+++ b/assets/css/components/about.css
@@ -21,7 +21,7 @@
 }
 
 .icon{
-  background-image: url("/assets/icons/icon.svg");
+  background-image: url("/Blog_HTML_CSS/assets/icons/Icon.svg");
   height: 25.6px;
   width: 25.6px;
   display: flex;
