--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,7 @@
 @import url("components/footer.css");
 @import url("components/about.css");
 @import url("components/form.css");
-@import url("components/input.css")
+@import url("components/input.css");
+@import url("components/portafolio.css")
 
 /* layout */
