ADD: General  css for all projects

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,7 @@
 @import url("components/about.css");
 @import url("components/form.css");
 @import url("components/input.css");
-@import url("components/portafolio.css")
+@import url("components/portafolio.css");
+@import url("components/projects.css");
 
 /* layout */
