--- a/assets/css/global/utils.css
+++ b/assets/css/global/utils.css
@@ -67,6 +67,10 @@
   background-color: var(--primary-darker);
 }
 
+.bg-primary-regular {
+  background-color: var(--primary-regular);
+}
+
 .flex {
   display: flex;
 }
@@ -93,4 +97,12 @@
 
 .pxy-card{
   padding: 0 24px 16px 24px;
+}
+
+.m-2\.5{
+  margin-top: 2.5rem;
+}
+
+.mr-1{
+  margin-right: 1rem;
 }
